// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReplyPage /> should render correctly 1`] = `
<div>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "fragment": Object {
          "argumentDefinitions": Array [
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "userId",
              "type": "ID!",
            },
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "isAuthenticated",
              "type": "Boolean!",
            },
          ],
          "kind": "Fragment",
          "metadata": null,
          "name": "ReplyPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Variable",
                  "name": "id",
                  "variableName": "userId",
                },
              ],
              "concreteType": null,
              "kind": "LinkedField",
              "name": "node",
              "plural": false,
              "selections": Array [
                Object {
                  "kind": "InlineFragment",
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "ReplyConnection",
                      "kind": "LinkedField",
                      "name": "replies",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "args": Array [
                            Object {
                              "kind": "Variable",
                              "name": "isAuthenticated",
                              "variableName": "isAuthenticated",
                            },
                          ],
                          "kind": "FragmentSpread",
                          "name": "ProfileReplyList_replies",
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "type": "User",
                },
              ],
              "storageKey": null,
            },
          ],
          "type": "Query",
        },
        "hash": "90684a0c1dd73cd957f5b2bbdfba221e",
        "kind": "Request",
        "operation": Object {
          "argumentDefinitions": Array [
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "userId",
              "type": "ID!",
            },
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "isAuthenticated",
              "type": "Boolean!",
            },
          ],
          "kind": "Operation",
          "name": "ReplyPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Variable",
                  "name": "id",
                  "variableName": "userId",
                },
              ],
              "concreteType": null,
              "kind": "LinkedField",
              "name": "node",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "__typename",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "id",
                  "storageKey": null,
                },
                Object {
                  "kind": "InlineFragment",
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "ReplyConnection",
                      "kind": "LinkedField",
                      "name": "replies",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "ReplyEdge",
                          "kind": "LinkedField",
                          "name": "edges",
                          "plural": true,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "concreteType": "Reply",
                              "kind": "LinkedField",
                              "name": "node",
                              "plural": false,
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "id",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "createdAt",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "concreteType": "Questionnaire",
                                  "kind": "LinkedField",
                                  "name": "questionnaire",
                                  "plural": false,
                                  "selections": Array [
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "title",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "concreteType": "QuestionnaireStep",
                                      "kind": "LinkedField",
                                      "name": "step",
                                      "plural": false,
                                      "selections": Array [
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "url",
                                          "storageKey": null,
                                        },
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "id",
                                          "storageKey": null,
                                        },
                                      ],
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "id",
                                      "storageKey": null,
                                    },
                                  ],
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "concreteType": "User",
                                  "kind": "LinkedField",
                                  "name": "author",
                                  "plural": false,
                                  "selections": Array [
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "vip",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "url",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "username",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "concreteType": "Media",
                                      "kind": "LinkedField",
                                      "name": "media",
                                      "plural": false,
                                      "selections": Array [
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "url",
                                          "storageKey": null,
                                        },
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "id",
                                          "storageKey": null,
                                        },
                                      ],
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "displayName",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "id",
                                      "storageKey": null,
                                    },
                                  ],
                                  "storageKey": null,
                                },
                              ],
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "type": "User",
                },
              ],
              "storageKey": null,
            },
          ],
        },
        "params": Object {
          "id": null,
          "metadata": Object {},
          "name": "ReplyPageQuery",
          "operationKind": "query",
          "text": "query ReplyPageQuery(
  $userId: ID!
) {
  node(id: $userId) {
    __typename
    ... on User {
      replies {
        ...ProfileReplyList_replies_39ngnn
      }
    }
    id
  }
}

fragment ProfileReplyList_replies_39ngnn on ReplyConnection {
  edges {
    node {
      ...Reply_reply_39ngnn
      id
    }
  }
}

fragment Reply_reply_39ngnn on Reply {
  id
  createdAt
  questionnaire {
    title
    step {
      url
      id
    }
    id
  }
  author {
    vip
    ...UserAvatar_user
    ...UserLink_user
    id
  }
}

fragment UserAvatar_user on User {
  url
  username
  media {
    url
    id
  }
}

fragment UserLink_user on User {
  displayName
  url
}
",
        },
      }
    }
    render={[Function]}
    variables={
      Object {
        "isAuthenticated": true,
        "userId": "VXNlcjp1c2VyNQo=",
      }
    }
  />
</div>
`;

exports[`<ReplyPage /> should render correctly with profile not enabled 1`] = `
<div>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "fragment": Object {
          "argumentDefinitions": Array [
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "userId",
              "type": "ID!",
            },
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "isAuthenticated",
              "type": "Boolean!",
            },
          ],
          "kind": "Fragment",
          "metadata": null,
          "name": "ReplyPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Variable",
                  "name": "id",
                  "variableName": "userId",
                },
              ],
              "concreteType": null,
              "kind": "LinkedField",
              "name": "node",
              "plural": false,
              "selections": Array [
                Object {
                  "kind": "InlineFragment",
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "ReplyConnection",
                      "kind": "LinkedField",
                      "name": "replies",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "args": Array [
                            Object {
                              "kind": "Variable",
                              "name": "isAuthenticated",
                              "variableName": "isAuthenticated",
                            },
                          ],
                          "kind": "FragmentSpread",
                          "name": "ProfileReplyList_replies",
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "type": "User",
                },
              ],
              "storageKey": null,
            },
          ],
          "type": "Query",
        },
        "hash": "90684a0c1dd73cd957f5b2bbdfba221e",
        "kind": "Request",
        "operation": Object {
          "argumentDefinitions": Array [
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "userId",
              "type": "ID!",
            },
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "isAuthenticated",
              "type": "Boolean!",
            },
          ],
          "kind": "Operation",
          "name": "ReplyPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Variable",
                  "name": "id",
                  "variableName": "userId",
                },
              ],
              "concreteType": null,
              "kind": "LinkedField",
              "name": "node",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "__typename",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "id",
                  "storageKey": null,
                },
                Object {
                  "kind": "InlineFragment",
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "ReplyConnection",
                      "kind": "LinkedField",
                      "name": "replies",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "ReplyEdge",
                          "kind": "LinkedField",
                          "name": "edges",
                          "plural": true,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "concreteType": "Reply",
                              "kind": "LinkedField",
                              "name": "node",
                              "plural": false,
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "id",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "createdAt",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "concreteType": "Questionnaire",
                                  "kind": "LinkedField",
                                  "name": "questionnaire",
                                  "plural": false,
                                  "selections": Array [
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "title",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "concreteType": "QuestionnaireStep",
                                      "kind": "LinkedField",
                                      "name": "step",
                                      "plural": false,
                                      "selections": Array [
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "url",
                                          "storageKey": null,
                                        },
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "id",
                                          "storageKey": null,
                                        },
                                      ],
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "id",
                                      "storageKey": null,
                                    },
                                  ],
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "concreteType": "User",
                                  "kind": "LinkedField",
                                  "name": "author",
                                  "plural": false,
                                  "selections": Array [
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "vip",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "url",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "username",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "concreteType": "Media",
                                      "kind": "LinkedField",
                                      "name": "media",
                                      "plural": false,
                                      "selections": Array [
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "url",
                                          "storageKey": null,
                                        },
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "id",
                                          "storageKey": null,
                                        },
                                      ],
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "displayName",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "id",
                                      "storageKey": null,
                                    },
                                  ],
                                  "storageKey": null,
                                },
                              ],
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "type": "User",
                },
              ],
              "storageKey": null,
            },
          ],
        },
        "params": Object {
          "id": null,
          "metadata": Object {},
          "name": "ReplyPageQuery",
          "operationKind": "query",
          "text": "query ReplyPageQuery(
  $userId: ID!
) {
  node(id: $userId) {
    __typename
    ... on User {
      replies {
        ...ProfileReplyList_replies_39ngnn
      }
    }
    id
  }
}

fragment ProfileReplyList_replies_39ngnn on ReplyConnection {
  edges {
    node {
      ...Reply_reply_39ngnn
      id
    }
  }
}

fragment Reply_reply_39ngnn on Reply {
  id
  createdAt
  questionnaire {
    title
    step {
      url
      id
    }
    id
  }
  author {
    vip
    ...UserAvatar_user
    ...UserLink_user
    id
  }
}

fragment UserAvatar_user on User {
  url
  username
  media {
    url
    id
  }
}

fragment UserLink_user on User {
  displayName
  url
}
",
        },
      }
    }
    render={[Function]}
    variables={
      Object {
        "isAuthenticated": true,
        "userId": "VXNlcjp1c2VyNQo=",
      }
    }
  />
</div>
`;

exports[`<ReplyPage /> should render correctly with profile not enabled and not authenticated 1`] = `
<div>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={
      Object {
        "fragment": Object {
          "argumentDefinitions": Array [
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "userId",
              "type": "ID!",
            },
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "isAuthenticated",
              "type": "Boolean!",
            },
          ],
          "kind": "Fragment",
          "metadata": null,
          "name": "ReplyPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Variable",
                  "name": "id",
                  "variableName": "userId",
                },
              ],
              "concreteType": null,
              "kind": "LinkedField",
              "name": "node",
              "plural": false,
              "selections": Array [
                Object {
                  "kind": "InlineFragment",
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "ReplyConnection",
                      "kind": "LinkedField",
                      "name": "replies",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "args": Array [
                            Object {
                              "kind": "Variable",
                              "name": "isAuthenticated",
                              "variableName": "isAuthenticated",
                            },
                          ],
                          "kind": "FragmentSpread",
                          "name": "ProfileReplyList_replies",
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "type": "User",
                },
              ],
              "storageKey": null,
            },
          ],
          "type": "Query",
        },
        "hash": "90684a0c1dd73cd957f5b2bbdfba221e",
        "kind": "Request",
        "operation": Object {
          "argumentDefinitions": Array [
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "userId",
              "type": "ID!",
            },
            Object {
              "defaultValue": null,
              "kind": "LocalArgument",
              "name": "isAuthenticated",
              "type": "Boolean!",
            },
          ],
          "kind": "Operation",
          "name": "ReplyPageQuery",
          "selections": Array [
            Object {
              "alias": null,
              "args": Array [
                Object {
                  "kind": "Variable",
                  "name": "id",
                  "variableName": "userId",
                },
              ],
              "concreteType": null,
              "kind": "LinkedField",
              "name": "node",
              "plural": false,
              "selections": Array [
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "__typename",
                  "storageKey": null,
                },
                Object {
                  "alias": null,
                  "args": null,
                  "kind": "ScalarField",
                  "name": "id",
                  "storageKey": null,
                },
                Object {
                  "kind": "InlineFragment",
                  "selections": Array [
                    Object {
                      "alias": null,
                      "args": null,
                      "concreteType": "ReplyConnection",
                      "kind": "LinkedField",
                      "name": "replies",
                      "plural": false,
                      "selections": Array [
                        Object {
                          "alias": null,
                          "args": null,
                          "concreteType": "ReplyEdge",
                          "kind": "LinkedField",
                          "name": "edges",
                          "plural": true,
                          "selections": Array [
                            Object {
                              "alias": null,
                              "args": null,
                              "concreteType": "Reply",
                              "kind": "LinkedField",
                              "name": "node",
                              "plural": false,
                              "selections": Array [
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "id",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "kind": "ScalarField",
                                  "name": "createdAt",
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "concreteType": "Questionnaire",
                                  "kind": "LinkedField",
                                  "name": "questionnaire",
                                  "plural": false,
                                  "selections": Array [
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "title",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "concreteType": "QuestionnaireStep",
                                      "kind": "LinkedField",
                                      "name": "step",
                                      "plural": false,
                                      "selections": Array [
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "url",
                                          "storageKey": null,
                                        },
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "id",
                                          "storageKey": null,
                                        },
                                      ],
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "id",
                                      "storageKey": null,
                                    },
                                  ],
                                  "storageKey": null,
                                },
                                Object {
                                  "alias": null,
                                  "args": null,
                                  "concreteType": "User",
                                  "kind": "LinkedField",
                                  "name": "author",
                                  "plural": false,
                                  "selections": Array [
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "vip",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "url",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "username",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "concreteType": "Media",
                                      "kind": "LinkedField",
                                      "name": "media",
                                      "plural": false,
                                      "selections": Array [
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "url",
                                          "storageKey": null,
                                        },
                                        Object {
                                          "alias": null,
                                          "args": null,
                                          "kind": "ScalarField",
                                          "name": "id",
                                          "storageKey": null,
                                        },
                                      ],
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "displayName",
                                      "storageKey": null,
                                    },
                                    Object {
                                      "alias": null,
                                      "args": null,
                                      "kind": "ScalarField",
                                      "name": "id",
                                      "storageKey": null,
                                    },
                                  ],
                                  "storageKey": null,
                                },
                              ],
                              "storageKey": null,
                            },
                          ],
                          "storageKey": null,
                        },
                      ],
                      "storageKey": null,
                    },
                  ],
                  "type": "User",
                },
              ],
              "storageKey": null,
            },
          ],
        },
        "params": Object {
          "id": null,
          "metadata": Object {},
          "name": "ReplyPageQuery",
          "operationKind": "query",
          "text": "query ReplyPageQuery(
  $userId: ID!
) {
  node(id: $userId) {
    __typename
    ... on User {
      replies {
        ...ProfileReplyList_replies_39ngnn
      }
    }
    id
  }
}

fragment ProfileReplyList_replies_39ngnn on ReplyConnection {
  edges {
    node {
      ...Reply_reply_39ngnn
      id
    }
  }
}

fragment Reply_reply_39ngnn on Reply {
  id
  createdAt
  questionnaire {
    title
    step {
      url
      id
    }
    id
  }
  author {
    vip
    ...UserAvatar_user
    ...UserLink_user
    id
  }
}

fragment UserAvatar_user on User {
  url
  username
  media {
    url
    id
  }
}

fragment UserLink_user on User {
  displayName
  url
}
",
        },
      }
    }
    render={[Function]}
    variables={
      Object {
        "isAuthenticated": false,
        "userId": "VXNlcjp1c2VyNQo=",
      }
    }
  />
</div>
`;
